# personal-site

./: .gitignore  CLAUDE.md  Makefile  README.md  index.html  next.config.mjs  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  migrate.yml
app/: cli.py  config.py  database.py
app/dao/: index.py
app/domain/: capture.py  note.py
app/models/: index.py
app/services/intent/: __init__.py
app/services/output/: __init__.py
app/services/reasoning/: __init__.py
braindump/: .env.example  .gitignore  CLAUDE.md  Makefile  pyproject.toml
braindump/app/: config.py  database.py
braindump/spec/: ARCHITECTURE.md
docs/: BACKEND_SPEC.md
internal/handler/: chat.go
spec/: ARCHITECTURE.md
src/: App.css  App.tsx  index.css
src/app/: globals.css  layout.tsx  page.tsx
src/app/blog/: page.tsx
src/components/: Alert.tsx  Button.tsx  ContactForm.tsx  Footer.tsx  GlowCard.tsx  HomeInfo.tsx  Navbar.tsx  Navigation.css  Navigation.tsx  PostCard.tsx  Squiggle.tsx  TitleHeader.tsx
src/constants/: index.ts
src/hooks/: useAlert.ts
src/models/: Bird.tsx  Fox.tsx  Island.tsx  Plane.tsx  Sky.tsx
src/pages/: About.css  About.tsx  Contact.css  Contact.tsx  Home.css  Home.tsx  Projects.css  Projects.tsx
src/sections/: Contact.tsx  Experience.tsx  Footer.tsx  Hero.tsx  ShowcaseSection.tsx  TechStack.tsx
src/types/: assets.d.ts  index.ts
talkerinos/docs/: OVERVIEW.md
tests/: test_rebuild.py
vault/: README.md  _index.md  _tags.md
vault/notes/: example-note.md
web/: .env.local.example  README.md  drizzle.config.ts  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  vitest.config.ts  vitest.server-only-stub.ts
web/drizzle/: 0000_baseline.sql
web/src/: auth.ts
web/supabase/: events.sql
(+117 files in other folders)
