[project]
name = "grassdump-os"
version = "0.0.1"
description = "Voice-first personal knowledge OS. Obsidian vault is the source of truth; everything else is a disposable derived index."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.36",
    "python-slugify>=8.0",
    "structlog>=25.0",
    "typer>=0.12",
]

[project.optional-dependencies]
# Layers that have a home but no code yet. Installed as they come online.
api = ["fastapi>=0.115", "uvicorn[standard]>=0.32"]
worker = ["procrastinate>=2.0", "psycopg[binary]>=3.2"]
postgres = ["psycopg[binary]>=3.2", "pgvector>=0.3"]
reasoning = ["pydantic-ai-slim[anthropic]>=1.0"]  # house LLM framework, matches didero

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6", "pyright>=1.1"]

[project.scripts]
gdos = "app.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "PTH",
    "ERA", "PL", "RUF", "PERF", "ANN", "N", "RET", "DTZ", "PIE", "Q", "TID",
]
ignore = [
    "D100",    # missing docstring in public module
    "PLR2004", # magic value comparison
    "COM812",  # handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "ARG"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportUnusedImport = "error"
reportUnusedVariable = "error"
